# stock_analyst_01

./: README.md  pyproject.toml
src/stock_analyst_01/: crew.py  main.py
src/stock_analyst_01/config/: agents.yaml  tasks.yaml
src/stock_analyst_01/tools/: custom_tool.py  news.py  search.py  stock_details.py
